# threed

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  config.yaml  definitions.cmake
include/: features.hpp  file_io.hpp  neighborhood.hpp  timer.hpp
src/: features.cpp  file_io.cpp  main.cpp  neighborhood.cpp
